--- a/composer.json
+++ b/composer.json
@@ -39,27 +39,11 @@
         }
     },
     "require": {
-        "php": "^8.1",
-        "statamic/cms": "^5.0",
-        "jenssegers/agent": "^2.6",
-        "predis/predis": "^2.0"
+        "php": "^8.3",
+        "statamic/cms": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
-        "laravel-mix": "^6.0",
-        "vue-loader": "^17.0",
-        "vue": "^3.0",
-        "chart.js": "^4.0",
-        "@vue/compiler-sfc": "^3.0"
-    },
-    "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "orchestra/testbench": "^9.0"
     },
     "config": {
         "allow-plugins": {
