--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     },
     "require": {
         "php": "^8.3",
-        "statamic/cms": "^5.0"
+        "statamic/cms": "^5.0",
+        "jenssegers/agent": "^2.6"
     },
     "require-dev": {
         "orchestra/testbench": "^9.0"
