--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "watch": "vite build --watch"
     },
     "dependencies": {
-        "alpinejs": "^3.13.3"
+        "alpinejs": "^3.13.3",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17"
     },
     "devDependencies": {
         "chart.js": "^4.4.7",
